--- a/project.json
+++ b/project.json
@@ -5,6 +5,8 @@
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.23.0-preview]",
+    "UiPath.GSuite.Activities": "[2.4.3]",
+    "UiPath.IntegrationService.Activities": "[1.1.0]",
     "UiPath.Mail.Activities": "[1.21.1]",
     "UiPath.System.Activities": "[23.12.0-preview]",
     "UiPath.Testing.Activities": "[23.12.0-preview]",
